--- a/google-maps-directions/package.json
+++ b/google-maps-directions/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "soter",
+  "name": "google-maps-directions",
   "main": "expo-router/entry",
   "version": "1.0.0",
   "scripts": {
@@ -9,27 +9,19 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "test": "jest --watchAll",
-    "type": "module",
     "lint": "expo lint"
   },
   "jest": {
     "preset": "jest-expo"
   },
   "dependencies": {
-    "@expo/ngrok": "^4.1.3",
     "@expo/vector-icons": "^14.0.2",
-    "@react-native-community/geolocation": "^3.3.0",
-    "@react-native-picker/picker": "^2.7.7",
-    "@react-navigation/native": "^6.1.18",
-    "@react-navigation/native-stack": "^6.10.1",
-    "@react-navigation/stack": "^6.4.1",
-    "axios": "^1.7.2",
-    "expo": "~51.0.20",
+    "@react-navigation/native": "^6.0.2",
+    "expo": "~51.0.24",
     "expo-constants": "~16.0.2",
-    "expo-font": "~12.0.8",
-    "expo-linear-gradient": "~13.0.2",
+    "expo-font": "~12.0.9",
     "expo-linking": "~6.3.1",
-    "expo-router": "~3.5.18",
+    "expo-router": "~3.5.20",
     "expo-splash-screen": "~0.27.5",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
@@ -37,10 +29,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.3",
-    "react-native-element-dropdown": "^2.12.1",
     "react-native-gesture-handler": "~2.16.1",
-    "react-native-google-places-autocomplete": "^2.5.6",
-    "react-native-maps": "1.14.0",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
